--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ compileTestJava {
     options.encoding = 'UTF-8'
 }
 
-dependencies {
+dependencies { // подключение зависимостей
     implementation 'org.slf4j:slf4j-api:2.0.9' // зависимость от SLF4J API
     implementation 'ch.qos.logback:logback-classic:1.4.14' // зависимость от Logback (реализация SLF4J)
     implementation 'org.seleniumhq.selenium:selenium-java:4.16.1'//  добавление библиотек Selenium WebDriver
