--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java-library'
 }
 
-repositories {
+repositories {  // поиск библиотек в мавен централ
     mavenCentral()
 }
 
@@ -18,6 +18,6 @@ dependencies { // подключение зависимостей
     implementation 'org.junit.jupiter:junit-jupiter:5.10.1'// Module "junit-jupiter" of JUnit 5.
 }
 
-test {
+test { // говорим что будем использовать JUnit
     useJUnitPlatform {}
 }
